@@ -17,7 +17,8 @@
 (add-hook 'prog-mode-hook
           '(lambda ()
              (setq indent-tabs-mode nil)
-             ;; (ignore-errors (whitespace-mode t))
+             (ignore-errors (whitespace-mode t))
+             (ignore-errors (fci-mode 1))
              (linum-mode 1)
              ;; (or (ignore-errors (hideshowvis-minor-mode t)) (hs-minor-mode t))
              (hs-minor-mode t)
